# font_parse

./: .gitignore  Cargo.toml
examples/: render_glyph.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
src/: cff_glyph_accessor.rs  error.rs  glyph_accessor.rs  lib.rs  ttf_glyph_accessor.rs
src/cff/: dictionary_deserializer.rs  glyph_accessor.rs  index.rs  mod.rs  standard_strings.rs
src/tables/: cff.rs  glyf.rs  head.rs  hhea.rs  loca.rs  maxp.rs  mod.rs
tests/: cff.rs  font.rs
tests/font_files/: 02font-collection-broken.otc  Inconsolata-dump.txt
tests/font_fragments/: head_table  head_table.2
