[package]
name = "font_parse"
version = "0.1.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]
edition = "2018"

[dependencies]
nom = { version = "^4", features = ["verbose-errors"] }
serde_derive = "^1"
serde = "^1"
log = { version = "*" }
derive_more = "*"
font-kit = "*"

[dev_dependencies]
simple_logger = "^1"
svg = "^0.5"
